src/main/java/com/example/obrestdata_jpa/Error/BadRequestException.java
package com.example.obrestdata_jpa.Error;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) {
        super(message);
    }
}
